--- a/index.html
+++ b/index.html
@@ -139,160 +139,7 @@ cursor: url(""), url("cursors/Hand.cur"), default;
     opacity: 0;
   }
 }
-body {
-  font-family: Helvetica; 
-  font-weight: 400;
-  background: #ecf0f1;
-}
-h1 {
-  font-size: 1.5em;
-  text-align: center;
-  margin: 1.2em 0;
-  color: #555555;
-}
-.title
-{
-  color: #ecf0f1; 
-}
 
-/*Carousel*/
-.carrousel {
-  background: #ffffff;
-  text-align: center;
-  padding: 4em 0;
-  height: 7.5em;
-  max-width: 750px;
-  margin: auto;
-  position: relative;
-  overflow: hidden;
-}
-.carrousel h2 {
-  margin: 0;
-  margin-top: -1.7em;
-  padding: 0;
-  font-size: 1em;
-  text-align: center;
-  color: #bbbbbb;
-}
-.carrousel .slides {
-  width: 400%;
-  left: 0;
-  padding-left: 0;
-  padding-top: 1em;
-  overflow: hidden;
-  list-style: none;
-  position: relative;
-
-  -webkit-transition: transform .5s;
-  -moz-transition: transform .5s;
-  -o-transition: transform .5s;
-  transition: transform .5s;
-}
-.carrousel .slides li {
-  width: 25%;
-  position: relative;
-  float: left;
-}
-.carrousel li p{
-  margin-top: 0;  
-}
-.carrousel li q {
-  max-width: 90%;
-  margin: auto;
-  color: #666666;
-  font-size: 1.3em;
-  font-weight: bold;
-}
-.carrousel li img {
-  width: 3em;
-  height: 3em;
-  object-fit: cover;
-  border-radius: 50%;
-  margin-left: -1.5em;
-  margin-right: 0.5em;
-  vertical-align: middle;
-}
-.carrousel li span.author {
-  margin-top:0.5em;
-  font-size: 1.2em;
-  color: #777777;
-  display: block;
-}
-.carrousel .slidesNavigation {
-  display: block;
-  list-style: none;
-  text-align: center;
-  bottom: 1em;
-  /*--- Centering trick---*/
-    /* Absolute positioning*/
-    position: absolute; 
-    /* Abosulte positioning*/
-    width: 104px; /*This width  is the addition of the width of all the navigations dots - So in this case is   104 because the navigation dots are 26px (width:10px and 6px marginleft + 6 px marginright) and there are 4 dots so 4x26=104 */
-    left: 50%; /*Centering de element*/
-    margin-left: -52px; /*adjusting the centering by applying a negative margin of half of the width*/
-}
-.carrousel input {
-  display: none;
-}
-.carrousel .slidesNavigation label {
-  float: left;
-  margin: 6px;
-  display: block;
-  height: 10px;
-  width: 10px;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  border: solid 2px #2980b9;
-  font-size: 0;
-}
-/* You have to repeat this with each slide
-TODO: make it easier with SCSS
-25% movement 100/slides-num
-*/
-#radio-1:checked ~ .slides {
-  transform: translateX(0%);
-}
-#radio-2:checked ~ .slides {
-  transform: translateX(-25%);
-}
-#radio-3:checked ~ .slides {
-  transform: translateX(-50%);
-}
-#radio-4:checked ~ .slides {
-  transform: translateX(-75%);
-}
-
-
-.carrousel .slidesNavigation label:hover {
-   cursor: pointer;
-}
-/* You have to repeat this with each slide/dot */
-.carrousel #radio-1:checked ~ .slidesNavigation label#dotForRadio-1,
-.carrousel #radio-2:checked ~ .slidesNavigation label#dotForRadio-2,
-.carrousel #radio-3:checked ~ .slidesNavigation label#dotForRadio-3,
-.carrousel #radio-4:checked ~ .slidesNavigation label#dotForRadio-4 {
-  background: #2980b9;
-}
-
-@media  (max-width: 796px) {
-  .carrousel{
-    height: 8.5em;
-  }
-}
-@media  (max-width: 480px) {
-  .carrousel li p {
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-  }
-  .carrousel li q {
-      font-size: 1em;
-  }
-  .carrousel li img {
-     width:2em;
-     margin-left: -1em;
-     margin-right: 0.25em;
-  }
-}
 /* conext menu css */
 #context-menu {
   position:fixed;
@@ -375,7 +222,7 @@ TODO: make it easier with SCSS
           <a href="#" data-target="slide-out" class="sidenav-trigger" onclick="M.toast({html: '<br>DRAWER OPENED<br>'})">
             <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
           </a>
-          <a href="./" class="title"> <span class="mdc-top-app-bar__title">Neon Tech</span></a>
+          <a href="./" style="color: #eee;" ><span class="mdc-top-app-bar__title">Neon Tech</span></a>
         </section>
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
           <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Bookmark this page">bookmark</button>
@@ -466,32 +313,6 @@ window.addEventListener("click",function(){
 
  </script>
  
-  <footer class="page-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Footer Content</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-        </div>
-        <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-      © 2014 Copyright Text
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-      </div>
-    </div>
-  </footer>
-      
 
   <!--  Scripts-->
   <script src="js/main.js"></script>
